--- a/app/src/main/res/layout/activity_intents_playground.xml
+++ b/app/src/main/res/layout/activity_intents_playground.xml
@@ -179,6 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
