Prevent Data Lost on configuration Changes:

--- a/app/src/main/res/layout/activity_intents_playground.xml
+++ b/app/src/main/res/layout/activity_intents_playground.xml
@@ -172,18 +172,17 @@
         app:layout_constraintTop_toTopOf="@+id/initialCounterEditText" />
 
     <!-- showing the result which is coming from the result activity generated which is initially gone -->
-    <TextView
-        android:id="@+id/result"
-        style="@style/TextAppearance.MaterialComponents.Body1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/initialCounterEditText" />
+        <TextView
+            android:id="@+id/result"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/ResultTextView"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/initialCounterEditText" />
 
 
 
